Build app without test cases